<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.myapplication2.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mail"
        android:icon="@android:drawable/ic_dialog_email"
        android:orderInCategory="100"
        android:title="@string/action_mail"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_item1"
        android:orderInCategory="100"
        android:title="@string/action_item1"
        app:showAsAction="never" />
    <group
        android:id="@+id/group1">

    <item
        android:id="@+id/action_item2"
        android:orderInCategory="100"
        android:title="@string/action_item2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item3"
        android:orderInCategory="100"
        android:title="@string/action_item3"
        app:showAsAction="never" />
    </group>
</menu>
